--- a/index.html
+++ b/index.html
@@ -1,62 +1,224 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Image Identification Web App</title>
+<head>
+	<title>Case Study</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
-
-    <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.js"></script>
-
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
+</head>
+<body>
 
-  <body>
-    <center>
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 header_div">
-        <h2>Image Identification App
-        <img src="logo.gif">
-        </h2>          
-      </div>
-    
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 main_div">
-	      <label>Webcam View - </label>
-	      <div id="camera"></div>
-	      <button onclick="take_snapshot();" class="btn btn-info">Capture Image</button>
-      </div>
+<div class="container">
+	<h4>Case Study
+	<img src="case.png" style="width: 200px;"></h4>
+	<hr>
+	<ol>
+		<div class="text_images_and_result bob">
+			<li>
+				<b>Test Image - </b><img src="Bottle 2.jpeg" class="img-responsive">
+			</li>
+			<h5>Output on <b>Microsoft Azure</b> -
+				<span></span>  
+			</h5>
+			<h5>Output on <b>Mobilenet Model </b> -
+				<span></span>  
+			</h5>
 
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 main_div">
-        <label>Snapshot - </label>
-	      <div id="result"></div>
-	      <button onclick="check();" class="btn btn-success">Identify Image</button>
-	    </div>
-    </center>
+			<div class="mini_result">
+				<h4>Result - </h4>
+				<hr>
+				<h4></h4>
+			</div>
 
-    <div class="col-xs-12 footer_div">
-      <h4 class="col-sm-6 col-xs-12">
-        <img src="blub.gif">
-        <span id="object_name" ></span>
-      </h4>
-      <h4 id= "confidence"></h4>
-    </div> 
+		</div>
+		<hr>
+		
+		<div class="text_images_and_result bob">
+			<li>
+				<b>Test Image - </b><img src="shoes.jpeg" class="img-responsive">
+			</li>
+			<h5>Output on <b>Microsoft Azure</b> -
+				<span></span>  
+			</h5>
+			<h5>Output on <b>Mobilenet Model </b> -
+				<span></span>  
+			</h5>
+
+			<div class="mini_result">
+				<h4>Result - </h4>
+				<hr>
+				<h4></h4>
+			</div>
+
+		</div>
+		
+		<hr>
+
+		<div class="text_images_and_result bob">
+			<li>
+				<b>Test Image - </b><img src="Switchboard.jpeg" class="img-responsive">
+			</li>
+			<h5>Output on <b>Microsoft Azure</b> -
+				<span></span>  
+			</h5>
+			<h5>Output on <b>Mobilenet Model </b> -
+				<span></span>  
+			</h5>
+
+			<div class="mini_result">
+				<h4>Result - </h4>
+				<hr>
+				<h4></h4>
+			</div>
+
+		</div>
+
+		<hr>
+		<div class="text_images_and_result bob">
+			<li>
+				<b>Test Image - </b><img src="Air conditioner.jpeg" class="img-responsive">
+			</li>
+			<h5>Output on <b>Microsoft Azure</b> -
+				<span></span>  
+			</h5>
+			<h5>Output on <b>Mobilenet Model </b> -
+				<span></span>  
+			</h5>
+
+			<div class="mini_result">
+				<h4>Result - </h4>
+				<hr>
+				<h4></h4>
+			</div>
+
+		</div>
+
+		<hr>
+		<div class="text_images_and_result bob">
+			<li>
+				<b>Test Image - </b><img src="Bed.jpeg" class="img-responsive">
+			</li>
+			<h5>Output on <b>Microsoft Azure</b> -
+				<span></span>  
+			</h5>
+			<h5>Output on <b>Mobilenet Model </b> -
+				<span></span>  
+			</h5>
+
+			<div class="mini_result">
+				<h4>Result - </h4>
+				<hr>
+				<h4></h4>
+			</div>
+
+		</div><hr>
+
+		<div class="text_images_and_result bob">
+			<li>
+				<b>Test Image - </b><img src="Glass.jpeg" class="img-responsive">
+			</li>
+			<h5>Output on <b>Microsoft Azure</b> -
+				<span></span>  
+			</h5>
+			<h5>Output on <b>Mobilenet Model </b> -
+				<span></span>  
+			</h5>
+
+			<div class="mini_result">
+				<h4>Result - </h4>
+				<hr>
+				<h4></h4>
+			</div>
+
+		</div><hr>
+
+		<div class="text_images_and_result bob">
+			<li>
+				<b>Test Image - </b><img src="Spoon.jpeg" class="img-responsive">
+			</li>
+			<h5>Output on <b>Microsoft Azure</b> -
+				<span></span>  
+			</h5>
+			<h5>Output on <b>Mobilenet Model </b> -
+				<span></span>  
+			</h5>
+
+			<div class="mini_result">
+				<h4>Result - </h4>
+				<hr>
+				<h4></h4>
+			</div>
+
+		</div><hr>
+
+		<div class="text_images_and_result bob">
+			<li>
+				<b>Test Image - </b><img src="Hanger.jpeg" class="img-responsive">
+			</li>
+			<h5>Output on <b>Microsoft Azure</b> -
+				<span></span>  
+			</h5>
+			<h5>Output on <b>Mobilenet Model </b> -
+				<span></span>  
+			</h5>
+
+			<div class="mini_result">
+				<h4>Result - </h4>
+				<hr>
+				<h4></h4>
+			</div>
+
+		</div><hr>
+
+		<div class="text_images_and_result bob">
+			<li>
+				<b>Test Image - </b><img src="Soap.jpeg" class="img-responsive">
+			</li>
+			<h5>Output on <b>Microsoft Azure</b> -
+				<span></span>  
+			</h5>
+			<h5>Output on <b>Mobilenet Model </b> -
+				<span></span>  
+			</h5>
+
+			<div class="mini_result">
+				<h4>Result - </h4>
+				<hr>
+				<h4></h4>
+			</div>
+
+
+		</div><hr>
+		<div class="text_images_and_result bob">
+			<li>
+				<b>Test Image - </b><img src="fan.jpeg" class="img-responsive">
+			</li>
+			<h5>Output on <b>Microsoft Azure</b> -
+				<span></span>  
+			</h5>
+			<h5>Output on <b>Mobilenet Model </b> -
+				<span></span>  
+			</h5>
+
+			<div class="mini_result">
+				<h4>Result - </h4>
+				<hr>
+				<h4></h4>
+			</div>
+
+		</div><hr>
+
+	</ol>
+<br><br>
+</div>
+<br><br>
 
     <div class="copy_right_footer">
-      Developed by - WhitehatJr Team
+      <b>Developed by - Devashish Das</b>
     </div>
 
-<script src="main.js"></script>
-  </body>
+</body>
 </html>
-
-
-
-
-
-
-
-
- 
